# myterminal

./: CMakeLists.txt  README.md
src/: B_acc.cpp  B_acc.h  BinCall.cpp  BinCall.h  Bsubscriber.cpp  C_acc.cpp  C_acc.h  Call2B.cpp  Call2B.h  CallTests.cpp  CinCall.cpp  CinCall.h  Color.cpp  Color.h  GenAcc.cpp  GenAcc.h  GenCall.cpp  GenCall.h  GenEndpoint.h  Uri.h  main.cpp
